@@ -1,3 +1,10 @@
+2007-01-31  Richard Frith-Macdoanld <rfm@gnu.org>
+
+	* Source/GSFontInfo.m:
+	* Source/NSFont.m:
+	* Headers/Additions/GNUstepGUI/GSFontInfo.h:
+	Add stubs for numberOfGlyphs and coveredCharacterSet
+
 2007-01-30  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSCell.m (-_setupTextWithFrame:inView:editor:delegate:range:, 
